# Real-Time-3-pipeline-LLM-Financial-Advisor

./: README.md
.github/workflows/: cd_streaming_pipeline.yaml  destroy_aws_infrastructure.yaml
pipelines/inference_pipeline/: .env.example  README.md  pyproject.toml  requirements.txt
pipelines/inference_pipeline/inference_pipeline/: chains.py  constants.py  embeddings.py  handlers.py  langchain_bot.py  models.py  template.py
pipelines/inference_pipeline/tools/: bot.py  ui.py
pipelines/steaming_pipeline/: Makefile  pyproject.toml
pipelines/streaming_pipeline/: Dockerfile  Makefile  README.md  pyproject.toml
pipelines/streaming_pipeline/deploy/: create_user_data.sh  launch_ec2.sh  terminate_ec2.sh  user_data_template.sh
pipelines/streaming_pipeline/streaming_pipeline/: __init__.py  qdrant.py
pipelines/streaming_pipeline/tools/: search.py
pipelines/training_pipeline/: .env.example  Makefile  README.md  logging.yaml  pyproject.toml  requirements.txt
pipelines/training_pipeline/configs/: dev_inference_config.yaml  dev_training_config.yaml  inference_config.yaml  training_config.yaml
pipelines/training_pipeline/dataset/: testing_data.json  training_data.json
pipelines/training_pipeline/tools/: inference_run.py  train_run.py
pipelines/training_pipeline/training_pipeline/: __init__.py  configs.py  constants.py  metrics.py  models.py  utils.py
pipelines/training_pipeline/training_pipeline/api/: __init__.py  inference.py  training.py
pipelines/training_pipeline/training_pipeline/data/: qa.py  utils.py
pipelines/training_pipeline/training_pipeline/prompt_templates/: prompter.py
