[tool.poetry]
name = "inference_pipeline"
version = "0.1.0"
description = "Inference Pipeline with Langchain"
authors = ["MuhammadBinUsman03 <muhammadbin.2003@gmail.com>"]
readme = "README.md"
packages = [{include = "inference_pipeline"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qdrant-client = "1.11.0"
langchain = "^0.0.285"
comet-ml = "3.35.1"
transformers = "^4.31.0"
peft = "^0.4.0"
accelerate = "^0.21.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.1"
einops = "^0.6.1"
fire = "^0.5.0"
wandb = "0.17.6"
bitsandbytes = "^0.41.1"
torch = "2.0.1"
beam-sdk = "0.15.9"
gradio = "^3.48.0"
unstructured = "^0.10.28"
sentencepiece = "0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.isort]
case-sensitive = true
